Fixed text color for notes in diagrams in dark mode (#4518)
fixes #4517

--- a/src/assets/javascripts/components/content/code/mermaid/index.css
+++ b/src/assets/javascripts/components/content/code/mermaid/index.css
@@ -346,6 +346,11 @@ line {
   stroke: none;
 }
 
+/* make statically colored note nodes use a statically color text */
+.noteText > tspan {
+  fill: #000;
+}
+
 /* Sequence arrow head */
 #arrowhead path {
   fill: var(--md-mermaid-edge-color);
